test/types/scalar/tmacd/fatal.good
fatal.chpl:5: error: unresolved call 'int(64)(real(64))'
