test/types/scalar/tmacd/fatal.chpl
var sum1 = 0.0;
var sum : int = 0;

sum1 = 4.0;
sum = (int)(sum1);
